<resources>
    <string name="app_name">Task Five</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_email">Email</string>
    <string name="message">Message</string>
</resources>