<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"

    >
    <TextView
        android:id="@+id/tv_register_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="Register Screen"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_register_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/register_email"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:boxStrokeColor="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_screen"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/iv_email_cursor"
            android:drawablePadding="@dimen/_8sdp"
            android:inputType="textEmailAddress"


            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_register_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:boxStrokeColor="@color/main"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_email"
        app:startIconTint="@color/main">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_internal_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/iv_lock_cursor"
            android:drawablePadding="@dimen/_8sdp"
            android:inputType="numberPassword"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:boxStrokeColor="@color/main"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/main"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/et_register_password"
        app:startIconTint="@color/main">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_internal_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/iv_lock_cursor"
            android:drawablePadding="@dimen/_8sdp"
            android:inputType="numberPassword"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:backgroundTint="@color/main"
        android:padding="@dimen/_8sdp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="@dimen/_16sdp"
        app:cornerRadius="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_password" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/back"
        android:backgroundTint="@color/main"
        android:textAllCaps="false"
        android:textSize="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_8sdp"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registration" />

</androidx.constraintlayout.widget.ConstraintLayout>