<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_login_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="Login Screen"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_120sdp"
        android:layout_marginEnd="@dimen/_10sdp"

        android:hint="@string/email"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:boxStrokeColor="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_screen">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/iv_email_cursor"
            android:drawablePadding="@dimen/_8sdp"
            android:inputType="textEmailAddress"


            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:boxStrokeColor="@color/main"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:startIconTint="@color/main">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_internal_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/iv_lock_cursor"
            android:drawablePadding="@dimen/_8sdp"
            android:inputType="numberPassword"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/login"
        android:backgroundTint="@color/main"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:textSize="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_8sdp"
        app:cornerRadius="@dimen/_8sdp"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/register"
        android:backgroundTint="@color/main"
        android:textAllCaps="false"
        android:textSize="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_8sdp"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>